--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "quill-monorepo",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Quill development environment",
   "private": true,
-  "author": "Jason Chen <jhchen7@gmail.com>",
+  "author": "Lukas Wolfsteiner <lukas@wolfsteiner.media>",
   "homepage": "https://quilljs.com",
   "config": {
     "ports": {
@@ -17,10 +17,10 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/slab/quill.git"
+    "url": "git+https://github.com/dotwee/quill.git"
   },
   "bugs": {
-    "url": "https://github.com/slab/quill/issues"
+    "url": "https://github.com/dotwee/quill/issues"
   },
   "scripts": {
     "build": "run-p build:*",
