--- a/packages/quill/package.json
+++ b/packages/quill/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill",
+  "name": "@dotwee/quill",
   "version": "2.0.4",
   "description": "Your powerful, rich text editor",
   "author": "Lukas Wolfsteiner <lukas@wolfsteiner.media>",
@@ -58,6 +58,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "license": "BSD-3-Clause",
   "repository": {
