fix: add skipLibCheck option to TypeScript configuration

--- a/packages/quill/tsconfig.json
+++ b/packages/quill/tsconfig.json
@@ -15,7 +15,8 @@
     "moduleResolution": "bundler",
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "test/**/*"]
 }
